crates/haneul-core/src/unit_tests/snapshots/haneul_core__authority__authority_tests__clever_abort_with_const_abort_error.snap
---
source: crates/haneul-core/src/unit_tests/authority_tests.rs
expression: abort_error.unwrap()
---
Module ID: 0x0000000000000000000000000000000000000000000000000000000000000000::aborts
Function: abort_with_const
Line: 16
