crates/haneul-core/src/unit_tests/snapshots/haneul_core__authority__authority_tests__clever_abort_with_const_execution_error_source.snap
---
source: crates/haneul-core/src/unit_tests/authority_tests.rs
expression: execution_error_source.unwrap()
---
VMError with status ABORTED with sub status 13906834243062857729 at location Module ModuleId { address: 0000000000000000000000000000000000000000000000000000000000000000, name: Identifier("aborts") } and message 0x0000000000000000000000000000000000000000000000000000000000000000::aborts::abort_with_const at offset 1 at code offset 1 in function definition 2
